	* src/bundle.cpp: add macro FASTBIT_ORDER_OUTPUT_RIDS to control
	whether the RIDs within each bundle is sorted.  Dominique reported
	that this extra sorting can take up to half of the total time to
	create the bundles
	* src/category.cpp: include header file memory at the suggestion
	of Alexandre Maurel
	* src/utilidor.cpp: add option to use 65536 bins in sort_radix for
	16-bit integer keys

2012-01-18 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: change selectValues and supporting functions to
	work with in-memory data, relax the checking of element sizes to
	accomodate the situation of reading the .int file for a
	categorical column

2012-01-17 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: modified printing of return values from thread
	functions based on the suggestions from Dominique
	* examples/ardea.cpp: add option -x to tell ardea.cpp to repeat
	the write calls
	* src/category.cpp: add statements in category::selectUInts to
	work with the .int file (which was ignored)

2012-01-17 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* win/MinGW.mak: update makefile to work with X64 version of pthread

2012-01-16 John Wu <John dot Wu at ACM dot org>
	* src/bundle.cpp: add statements to skip over COUNT operations in
	the select clauses
	* src/bundle.h, src/bundle.cpp: add function printColumnNames
	* tests/Makefile.am: add test case 13 to really-small to check on
	the problem on very long integers reported by Bao Toan Nguyen

2012-01-14 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: add option to try compression again after a
	bitmap index has been built (attempt to iron out an irregularity
	observed in a test to measure index sizes)
	* examples/ibis.cpp: add code to record the data directories
	reordered for later uses

2012-01-13 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/bundle.cpp: missing initialization in bundle1 generating a
	segmentation fault
